feat: Garmin CSV import — POST /api/activities/import closes #3